# openbrewery_pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
airflow/: Dockerfile  entrypoint.sh  requirements.txt
airflow/dags/: brewery_bronze_to_silver_dag.py  brewery_silver_to_gold_dag.py  brewery_source_to_bronze_dag.py
config/: tables.yaml
datalake/gold/brewery/: .part-00000-4d127fc9-0ecb-4806-838d-79a7b512d5e8-c000.snappy.parquet.crc  part-00000-4d127fc9-0ecb-4806-838d-79a7b512d5e8-c000.snappy.parquet
datalake/silver/brewery/country=Austria/state=Krnten/: .part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet.crc  part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet
datalake/silver/brewery/country=Austria/state=Niedersterreich/: .part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet.crc  part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet
datalake/silver/brewery/country=Austria/state=Obersterreich/: .part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet.crc  part-00000-f533a8c6-2c6d-4f54-ad9d-20fabc28e635.c000.snappy.parquet
pipelines/: load.py  read.py  transform.py  utils.py
pipelines/bronze_to_silver/: brewery_transform.py  brewery_validate.py  main.py
pipelines/silver_to_gold/: brewery_transform.py  brewery_validate.py  main.py
pipelines/source_to_bronze/: extract.py  main.py
tests/: test_extract.py  test_load.py  test_read.py  test_utils.py
(+230 files in other folders)
